--- a/my_app/app/views/restaurants/show.html.erb
+++ b/my_app/app/views/restaurants/show.html.erb
@@ -20,5 +20,9 @@
   <%= @restaurant.phone_number %>
 </p>
 
+<p>
+<%= '<img src="https://maps.googleapis.com/maps/api/staticmap?center='.html_safe + @restaurant.address.gsub(/\s+/, "+") + '&zoom=13&size=400x400&markers=color:blue%7C'.html_safe + @restaurant.address.gsub(/\s+/, "+") + '&key=" / >'.html_safe %>
+</p>
+
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
