--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<h1>User interface</h1>
+
+<%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Login", new_user_session_path %>
+
 <h1>Listing Restaurants</h1>
 
 <table>
