--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@restaurant) do |f| %>
-  <% if @restaurant.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
-
-      <ul>
-      <% @restaurant.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+ <%= render "shared/error_messages", :target => @restaurant %>
 
   <div class="field">
     <%= f.label :name %><br>
