--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Owner:</strong>
+  <%= @name %>
+</p>
+
+<p>
   <%= image_tag(@map_url_string, alt: "Google Map") %>
 </p>
 
