Join table interface

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -26,6 +26,10 @@
 </p>
 
 <p>
+  <%= render "reservations/reservations" %>
+</p>
+
+<p>
   <%= image_tag(@map_url_string, alt: "Google Map") %>
 </p>
 
