--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,6 +7,7 @@
       <th>Description</th>
       <th>Address</th>
       <th>Phone number</th>
+      <th>Owner name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= restaurant.description %></td>
         <td><%= restaurant.address %></td>
         <td><%= restaurant.phone_number %></td>
+        <td><%= restaurant.users.first.name %></td>
         <td class="indexListButton"><%= link_to 'Show', restaurant %></td>
         <td class="indexListButton"><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         <td class="indexListButton"><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
