--- a/app/views/reservations/_reservations.html.erb
+++ b/app/views/reservations/_reservations.html.erb
@@ -1,7 +1,9 @@
 <div>
-	<%= render "reservations/reservation_list" %>
+	<%if @restaurant.reservations.first %>
+	<%=render "reservations/reservation_list" %>
+	<%end%>
 </div>
 
 <div>
-	<%= render "reservations/reservation_form" %>
+	<%=render "reservations/reservation_form" %>
 </div>
