--- a/app/views/reservations/_reservation_form.html.erb
+++ b/app/views/reservations/_reservation_form.html.erb
@@ -1,7 +1,7 @@
 <script>
 $(function() {
   $("#datepicker").datepicker({dateFormat: 'yy-mm-dd'});
-  $('#timepicker').timepicker({ 'scrollDefault': 'now' });
+  $('#timepicker').on( "click", $('#timepicker').timepicker({ 'scrollDefault': 'now' }));
 });
 </script>
 
@@ -26,7 +26,7 @@ $(function() {
     </p>
   </div>
 
-  <div class="field" style="display:">
+  <div class="field" style="display: none">
     <%= f.label :requested_date_time %><br />
     <%= f.text_field :requested_date_time %>
   </div>
