--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,12 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 		  <ul class="nav navbar-nav navbar-left">
 			<li class="active"><a href="#" id="NavLink">Find restaurant</a></li>
-			<li class="active"><a href="#" id="NavLink">Reservations</a></li>
 		  <% if user_signed_in? %>
-			<li class="active"><%= link_to "Owner protal", user_path(current_user), :id => "NavLink" %></a></li>
-		  <% end %>	
+		  	  <li class="active"><%= link_to "Reservations", user_reservations_path(current_user), :id => "NavLink" %></a></li>
+			  <% if current_user.role == "owner" || current_user.role == "admin"%>
+				<li class="active"><%= link_to "Owner protal", user_path(current_user), :id => "NavLink" %></a></li>
+			  <% end %>
+		  <% end %>
 		  </ul>
 		  <ul class="nav navbar-nav navbar-right">
 		  <% if user_signed_in? %>
