--- a/app/views/reservations/_reservation_form.html.erb
+++ b/app/views/reservations/_reservation_form.html.erb
@@ -12,7 +12,12 @@ $(function() {
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <% if user_signed_in? %>
+      <%= f.text_field :email, :value => current_user.email %>
+      (change the email if you are booking for someone else)
+    <% else %> 
+      <%= f.text_field :email %>
+    <% end %>
   </div>
 
   <div>
