--- a/lib/assets/stylesheets/Style.css
+++ b/lib/assets/stylesheets/Style.css
@@ -104,3 +104,17 @@ footer {	position:			fixed;
 .sandboxRow {		margin: px}
 
 .indexListButton { text-align: center; }
+
+#star-five {	background: url('http://imgur.com/I0EwG.png') transparent;
+				background-repeat: no-repeat;
+				background-position: right;
+				height: 45px;
+    			width: 105px;
+    			border: none;}
+
+#starringBox {		height: 45px;
+					position:relative;}
+
+#starringBox b {	   	position: absolute;               
+   						top: 50%;                      
+   						transform: translate(0, -50%) }
