Starring update server (need js)

--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -105,7 +105,7 @@ footer {	position:			fixed;
 
 .indexListButton { text-align: center; }
 
-#star-five {	background: url('http://imgur.com/I0EwG.png') transparent;
+#star-five {
 				background-repeat: no-repeat;
 				background-position: right;
 				height: 45px;
