--- a/app/views/starrings/_form.html.erb
+++ b/app/views/starrings/_form.html.erb
@@ -1,26 +1,7 @@
- <%= form_for(@starring, remote: true) do |f| %>
- <%= render "shared/error_messages", :target => @starring %>
-
-  <% if current_user.id == starring.restaurant.users.first.id%>
-    <span class="starringSwitch" value="un">
-  <% else %>
-  <% end %>
-
-  <div id="starringBox">
-    <b>Favorite:</b>
-    <%= f.submit "", :id => "star-five" %>
-  </div>
- 
-  <div class="field" style="display: none;">
-    <%= f.label :creation_time, :value => "Make Favorite" %><br />
-    <%= f.text_field :creation_time, :value => DateTime.now, :readonly => "readonly" %>
-  </div>
-  <div class="field" style="display: none;">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id, :value => current_user.id, :readonly => "readonly" %>
-  </div>
-  <div class="field" style="display: none;">
-    <%= f.label :restaurant_id %><br />
-    <%= f.text_field :restaurant_id, :value => @restaurant.id, :readonly => "readonly" %>
-  </div>
- <% end %>
+<% if Starring.where(restaurant_id: @restaurant.id).exists?(user_id: current_user.id) %>
+  <span id="starringSwitch">yes</span>
+  <%=render "starrings/form_unfavorite" %>
+<% else %>
+  <span id="starringSwitch">no</span>
+  <%=render "starrings/form_favorite" %>
+<% end %>
