--- a/app/assets/javascripts/StarringUpdate.js.erb
+++ b/app/assets/javascripts/StarringUpdate.js.erb
@@ -1,11 +1,33 @@
 function StarringUpdate (){
 	if ($("#starringSwitch").text() == "yes"){
-		UpdateStarring("(<%= asset_path 'YellowStar.png' %>)");
+		$(".switchNo").css("display", "");
+		$(".switchYes").css("display", "none");
 	}else{
-		UpdateStarring("(<%= asset_path 'WhiteStar.png' %>)");
+		$(".switchNo").css("display", "none");
+		$(".switchYes").css("display", "");
 	}
 }
 
-function UpdateStarring (StarImage){
-	$("#star-five").css({"background": "url" + StarImage + "transparent", "background-repeat": "no-repeat", "background-position": "right"})
+function SwitchFavoritePage (){
+	if ($("#starringSwitch").text() == "yes"){
+		$("#starringSwitch").text("no");
+	}else{
+		$("#starringSwitch").text("yes");
+	}
 }
+
+/*
+function DeleteFavorites (){
+	var userId = $("#userId").text();
+	var restaurantId = $("#restaurantId").text();
+	$.ajax({
+		type:"DELETE",
+		url:"/remove_starrings/" + restaurantId,
+		data:"",
+		success: function(){
+			alert ("unfavorited")
+		}
+
+	});
+}
+*/
