--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -105,16 +105,23 @@ footer {	position:			fixed;
 
 .indexListButton { text-align: center; }
 
-#star-five {
-				background-repeat: no-repeat;
-				background-position: right;
-				height: 45px;
-    			width: 105px;
-    			border: none;}
+#star-five-yellow { background: url(<%= asset_path 'YellowStar.png' %>) transparent;
+					background-repeat: no-repeat;
+					background-position: right;
+					height: 45px;
+	    			width: 105px;
+	    			border: none;}
 
-#starringBox {		height: 45px;
+#star-five-white { background: url(<%= asset_path 'WhiteStar.png' %>) transparent;
+					background-repeat: no-repeat;
+					background-position: right;
+					height: 45px;
+	    			width: 105px;
+	    			border: none;}
+
+.starringBox {		height: 45px;
 					position:relative;}
 
-#starringBox b {	   	position: absolute;               
+.starringBox b {	   	position: absolute;               
    						top: 50%;                      
    						transform: translate(0, -50%) }
