--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -26,20 +26,15 @@
   <%=   u.name %>
   <% end %>
 </p>
+<% if user_signed_in? %>
+  <p>
+    <%=render "starrings/form" %>
+  </p>
 
-<span style="display: ">
-  <div id="userId"><%= current_user.id %></div>
-  <div id="restaurantId"><%= @restaurant.id %></div>
-</span>
-
-<p>
-  <%=render "starrings/form" %>
-</p>
-
-<p>
-  <%=render "reservations/reservations" %>
-</p>
-
+  <p>
+    <%=render "reservations/reservations" %>
+  </p>
+<% end %>
 <hr />
 
 <p>
