--- a/app/views/starrings/_form.html.erb
+++ b/app/views/starrings/_form.html.erb
@@ -1,7 +1,7 @@
 <% if Starring.where(restaurant_id: @restaurant.id).exists?(user_id: current_user.id) %>
-  <span id="starringSwitch">yes</span>
+  <span id="starringSwitch" style="display: none;">yes</span>
 <% else %>
-  <span id="starringSwitch">no</span>
+  <span id="starringSwitch" style="display: none;">no</span>
 <% end %>
 
 <div id="unFav">
