--- a/app/views/starrings/_form.html.erb
+++ b/app/views/starrings/_form.html.erb
@@ -1,14 +1,14 @@
-<% if Starring.where(restaurant_id: @restaurant.id).exists?(user_id: current_user.id) %>
-  <span id="starringSwitch" style="display: none;">yes</span>
-<% else %>
-  <span id="starringSwitch" style="display: none;">no</span>
-<% end %>
-
-<div id="unFav">
-<%=render "starrings/form_unfavorite" %>
+<div>
+	<div class="starringBox">
+		<b>Favorite:</b><button id="star-five" onclick="FavoriteUpdate()" />
+	</div>
 </div>
 
-<%=render "starrings/form_favorite" %>
+<%= content_tag :div, class: "restaurantId", data: {temp: @restaurant.id} do %>
+<% end %>
+
+<%= content_tag :div, class: "userId", data: {temp: current_user.id} do %>
+<% end %>
 
 <script type="text/javascript">
 	StarringUpdate();
