--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -112,9 +112,14 @@ footer {	position:			fixed;
 	    			width: 105px;
 	    			border: none;}
 
-#star-five-white { background: url(<%= asset_path 'WhiteStar.png' %>) transparent;
+#star-five-white { 	background: url(<%= asset_path 'WhiteStar.png' %>) transparent;
 					background-repeat: no-repeat;
 					background-position: right;
+					height: 45px;
+	    			width: 105px;
+	    			border: none;}
+
+#star-five { 		
 					height: 45px;
 	    			width: 105px;
 	    			border: none;}
