delete extra line

--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -2,8 +2,7 @@
 /* CSS Document */
 html {	height:100%}
 
-body {	background-image:	;
-		min-height:			98%;
+body {	min-height:			98%;
 		margin:				0;}
 		
 footer {	position:			fixed;
