delete extra line

--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -11,7 +11,7 @@ footer {	position:			fixed;
 			width:				100%;}
 				
 #rightFooter {	background-color:	#cc0000;
-	position: fixed;
+				position: 			fixed;
 				color:				white;
 				display:			block;
 				padding:			10px;
@@ -84,7 +84,7 @@ footer {	position:			fixed;
 					
 .center {	overflow:			auto;
 			margin:				5px;
-			position:			;
+			position:			relative;
 			padding-top:		50px;
 			padding-left:		2%;
 			padding-right:		2%;
@@ -93,8 +93,7 @@ footer {	position:			fixed;
 
 .beCentered {	padding-top:		50px;
 				padding-bottom:		50px;
-				text-align:			center;
-				z-index:			;}
+				text-align:			center;}
 				
 .sandboxHeader {	text-decoration:	underline;
 					font-weight:		heavy;
@@ -118,8 +117,7 @@ footer {	position:			fixed;
 	    			width: 105px;
 	    			border: none;}
 
-#star-five { 		
-					height: 45px;
+#star-five { 		height: 45px;
 	    			width: 105px;
 	    			border: none;}
 
