--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -88,8 +88,7 @@ footer {	position:			fixed;
 			padding-top:		50px;
 			padding-left:		2%;
 			padding-right:		2%;
-			padding-bottom:		50px;
-			z-index:			-2;}
+			padding-bottom:		50px;}
 
 .beCentered {	padding-top:		50px;
 				padding-bottom:		50px;
