database dummy data update, more explainers on site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,11 +59,11 @@
 	</div>
 	<div id="rightFooter">
     	<span id="rightFooterText">
-			Copyright &copy; by 2015 Jerry Lin
+			Copyright &copy; by 2016 Jerry Lin
         </span>
 	</div>
 	<div id="about">
-		This is the about information.
+		This is my in-track project of Startup Institute, it's not perfect and will be improved by time - Jerry
 	</div>
 </footer>
 </html>
