--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Lets sign up!!</h2>
 Instruction:<br />
-Please enter dummy information, just register with random emails and there is no about email authentication<br />
+Please enter dummy information, just register with random emails and there is no email authentication<br />
 <br />
 User authority:<br />
 Patron - able to make reservation, favorite restaurant, view the list of favorited restaurant<br />
