starring performance update

--- a/lib/assets/stylesheets/Style.css.erb
+++ b/lib/assets/stylesheets/Style.css.erb
@@ -102,23 +102,10 @@ footer {	position:			fixed;
 
 .indexListButton { text-align: center; }
 
-#star-five-yellow { background: url(<%= asset_path 'YellowStar.png' %>) transparent;
-					background-repeat: no-repeat;
-					background-position: right;
-					height: 45px;
-	    			width: 105px;
-	    			border: none;}
-
-#star-five-white { 	background: url(<%= asset_path 'WhiteStar.png' %>) transparent;
-					background-repeat: no-repeat;
-					background-position: right;
-					height: 45px;
-	    			width: 105px;
-	    			border: none;}
-
-#star-five { 		height: 45px;
-	    			width: 105px;
-	    			border: none;}
+#star-five { 		background-size:	25px 25px; 
+					height: 			45px;
+	    			width: 				115px;
+	    			border: 			none;}
 
 .starringBox {		height: 45px;
 					position:relative;}
