--- a/app/assets/javascripts/StarringUpdate.js.erb
+++ b/app/assets/javascripts/StarringUpdate.js.erb
@@ -1,57 +1,41 @@
+var favorite = "not-favorited";
+
 function FavoriteUpdate() {
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (xhttp.readyState == 4 && xhttp.status == 200) {
-      StarringUpdate();
+      //StarringUpdate();
     }
   };
   xhttp.open("GET", "starring/favorite?starring[user_id]=" + $(".userId").data("temp") + "&starring[restaurant_id]=" + $(".restaurantId").data("temp"), true);
   xhttp.send();
-  StarringUpdate();
+
+  if (favorite == "not-favorited"){
+  	favorite = "favorited"
+  }else{
+  	favorite = "not-favorited"
+  }
+
+  ChangeStarring();
 }
 
 function StarringUpdate() {
   var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (xhttp.readyState == 4 && xhttp.status == 200) {
-      $("#star-five").css("background", xhttp.responseText);
+      favorite = xhttp.responseText;
+      ChangeStarring();
     }
   };
   xhttp.open("GET", "starring/star_update?starring[user_id]=" + $(".userId").data("temp") + "&starring[restaurant_id]=" + $(".restaurantId").data("temp"), true);
   xhttp.send();
 }
 
-
-/*
-function StarringUpdate (){
-	if ($("#starringSwitch").text() == "yes"){
-		$(".switchNo").css("display", "");
-		$(".switchYes").css("display", "none");
+function ChangeStarring() {
+	if (favorite == "favorited"){
+		$("#star-five").css("background", "url(<%= asset_path('YellowStar.png') %>) transparent no-repeat right");
 	}else{
-		$(".switchNo").css("display", "none");
-		$(".switchYes").css("display", "");
+		$("#star-five").css("background", "url(<%= asset_path('WhiteStar.png') %>) transparent no-repeat right");
 	}
-}
 
-function SwitchFavoritePage (){
-	if ($("#starringSwitch").text() == "yes"){
-		$("#starringSwitch").text("no");
-	}else{
-		$("#starringSwitch").text("yes");
-	}
 }
-
-function DeleteFavorites (){
-	var userId = $("#userId").text();
-	var restaurantId = $("#restaurantId").text();
-	$.ajax({
-		type:"DELETE",
-		url:"/remove_starrings/" + restaurantId,
-		data:"",
-		success: function(){
-			alert ("unfavorited")
-		}
-
-	});
-}
-*/
